Seems to have found the fuse header file

--- a/build.conf
+++ b/build.conf
@@ -1,5 +1,5 @@
 # JDK 1.5 or greater base directory
-JDK_HOME=ls /System/Library/Frameworks/JavaVM.framework/Home/
+JDK_HOME=/System/Library/Frameworks/JavaVM.framework/Home/
 
 # FUSE library & headers base directory
 #FUSE_HOME=/usr/local/Cellar/fuse4x/0.9.1
