--- a/build.conf
+++ b/build.conf
@@ -3,6 +3,9 @@ JDK_HOME=/System/Library/Frameworks/JavaVM.framework/Home/
 
 # FUSE library & headers base directory
 #FUSE_HOME=/usr/local/Cellar/fuse4x/0.9.1
+
 FUSE_HOME=/usr/local/lib/
+#/usr/local/Cellar/fuse4x/0.9.1
+
 # Set here any variables that may be needed to build user filesystems.
 #JE_CLASSPATH=/usr/share/je-3.3.62/lib/je-3.3.62.jar
